[package]
name = "arxkill"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A terminal UI to list and quit macOS GUI applications with real-time CPU monitoring"
repository = "https://git.cyberarx.systems/cyberarx/ArX-Quit"
keywords = ["macos", "process-manager", "tui", "ratatui"]
categories = ["utility", "command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
